# zephyr

./: README-RAPTOR2  README_COREDUMP_ARM64  build.sh
arch/: Kconfig
arch/arm64/: Kconfig
arch/arm64/core/: CMakeLists.txt  Kconfig  coredump.c  fatal.c  irq_manage.c  isr_wrapper.S  reset.S  smp.c
boards/arm64/qemu_cortex_a53/: qemu_cortex_a53_smp_defconfig
boards/arm64/raptor2/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  raptor2.dts  raptor2_a0.dts  raptor2_a0_defconfig  raptor2_a0_ppu.dts  raptor2_a0_ppu_defconfig  raptor2_defconfig  raptor2_irq_helper.c  raptor2_protium.dts  raptor2_protium_defconfig  raptor2_protium_single_ppu.dts  raptor2_protium_single_ppu_defconfig  raptor2_socfm.dts  raptor2_socfm_defconfig
cmake/: gcc-m-cpu.cmake  git.cmake
drivers/interrupt_controller/: Kconfig.gic  intc_gicv3.c
drivers/misc/: CMakeLists.txt  Kconfig
drivers/misc/raptor2/: CMakeLists.txt  Kconfig  README  raptor2_doorbell.c
drivers/serial/: uart_ns16550.c
dts/arm64/qemu-virt/: qemu-virt-a53.dtsi
dts/bindings/misc/: raptor2,doorbell.yaml
dts/bindings/serial/: ns16550.yaml
include/: spinlock.h
include/arch/arm64/: asm_inline_gcc.h  cpu.h  irq.h
include/debug/: coredump.h
kernel/: Kconfig  init.c
samples/experiments/: main.c  prj.conf  threads.c  threads.h  timers.h
samples/old/: CMakeLists.txt  main.c  prj.conf  threads.c  threads.h  timers.c  timers.h
scripts/coredump/gdbstubs/: __init__.py
soc/arm64/raptor2/: CMakeLists.txt  Kconfig.defconfig  Kconfig.soc  linker.ld  mmu_regions.c  soc.h
(+2 files in other folders)
